🪲 fix clipping of select field

--- a/src/components/ui/SelectField/SelectField.module.scss
+++ b/src/components/ui/SelectField/SelectField.module.scss
@@ -18,25 +18,25 @@
   button.expandButton {
     grid-column: 2 / span 1;
     grid-row: 1 / span 2;
-    justify-self: center;
-    align-self: center;
+    place-self: center center;
   }
 
   .selectionGroup {
     @apply absolute left-0 w-full bg-inherit
-           rounded-b-[8px] overflow-hidden;
+           rounded-b-[8px] overflow-hidden
+           z-10;
 
     top: calc(100% + 2px);
 
     .item {
       @apply bg-field-bg cursor-pointer;
-
       @include paddingHorizontal(var(--p-level-3));
       @include paddingVertical(var(--p-level-4));
 
       gap: var(--p-level-5);
 
       $anim: .08s ease;
+
       transition:
               $anim background-color,
               $anim color;
